cluster/apps/networking/traefik/external/iot/watermeter/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: watermeter
  namespace: external
subsets:
  - addresses:
      - ip: 10.40.0.39
    ports:
      - name: default
        port: 80
        protocol: TCP
