cluster/apps/networking/traefik/external/iot/watermeter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: waves-arrow-right
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: watermeter
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_WATERMETER_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: watermeter
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_WATERMETER_DOMAIN}"
      secretName: watermeter
